Changes:

${project.version}:  - Project migration: Ant -> Maven
(Rev.: @r@) - License upgraded: SPL -> CDDL
            - lib project restructured
            - org.softsmithy.lib.io.Streams.copy(Reader, Writer) added
            - Issue 1740983: fixed: org.softsmithy.lib.util.ObjectEqulatiyVerifier -> org.softsmithy.lib.util.ObjectEqualityVerifier
            - small fixes

v20100524:  - org.softsmithy.lib.io.Files: new utility methods
(Rev.: 470) - org.softsmithy.lib.util.zip.ZipFiles: bug fix
            - org.softsmithy.lib.persistence.AbstractEntity class added
            - org.softsmithy.lib.persistence.ExtendedBaseDAO class added
            - org.softsmithy.lib.persistence.GenericDAO class added
            - org.softsmithy.lib.persistence.ResourceLocalTransactionController class added
            - org.softsmithy.lib.swing.LocaleCellRenderer: supports LocaleLocalizer
            - org.softsmithy.lib.swing.CellRenderer: icon support added
            - org.softsmithy.lib.swing.XDefaultListCellRenderer: icon support added
            - org.softsmithy.lib.swing.JFileRootComboBox class added
            - org.softsmithy.lib.swing.JFileRootList class added
            - org.softsmithy.lib.swing.filechooser.FileRootComboBoxModel class added
            - org.softsmithy.lib.swing.filechooser.FileRootCellRenderer class added
            - org.softsmithy.lib.text.LocaleLocalizer class added
            - org.softsmithy.lib.text.Localizable class added
            - org.softsmithy.lib.text.Localizables class added
            - org.softsmithy.lib.text.Localizer class added
            - org.softsmithy.lib.util.Locales: new utility method
            - org.softsmithy.lib.util.Locales: many methods moved to org.softsmithy.lib.text.Localizables
            - org.softsmithy.lib.util.CountryCode class added
            - new dependency added: JPA (just the org.softsmithy.lib.persistence package; tested with EclipseLink 2.0)
            - generified classes