@@ -1,43 +1,0 @@
-Contains:
-
-softsmithy-devlib.jar - The SoftSmithy Development Utility Library
-src.zip               - The source code
-docs-directory        - Contains the Javadoc
-
-While the SoftSmithy Utility Library (lib) is a general utility library,
-the SoftSmithy Development Utility Library (devlib) provides utility classes for
-development, deployment, set up etc.
-You typically won't want/ need this library on the classpath of your application
-(runtime).
-
-Note: This is a pre-alpha version and the API is still subject to change! If you
-have any questions or comments feel free to contact me: 
-puce@users.sourceforge.net
-
-Note: This library has the following dependencies:
-- JPA (tested with EclipseLink 2.0)
-- JUnit 4.5
-- SoftSmithy Utility Library
-
-Have a look at CHANGES.txt for notes about changes.
-
-The contents of the files, which originate from softsmithy.org, are subject to 
-the Sun Public License Version 1.0 (the "License"); you may not use these files 
-except in compliance with the License.
-(This License has been apporved by OSI.)
-You can find a copy of this license in SPL.txt shipped with this distribution, 
-at http://www.sun.com/ or at http://www.opensource.org/licenses/.
-
-
-
-The newest version can be obtained via Subversion:
-http://sourceforge.net/svn/?group_id=64833
-
-svn co https://softsmithy.svn.sourceforge.net/svnroot/softsmithy/trunk/devlib softsmithy/trunk/devlib
-
-Used:
-jdk 1.6.0_20
-NetBeans IDE 6.8
-EclipseLink 2.0
-JUnit 4.5
-SoftSmithy Utility Library
