@@ -9,10 +9,10 @@
         <relativePath>../lib-parent</relativePath>
     </parent>
     <groupId>org.softsmithy.devlib</groupId>
-    <artifactId>devlib-core</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>devlib-all</artifactId>
     <version>0.1-SNAPSHOT</version>
-    <name>SoftSmithy Development Utility Library - Core</name>
+    <packaging>pom</packaging>
+    <name>SoftSmithy Development Utility Library - Multi Module Project</name>
     <url>http://www.softsmithy.org</url>
     <description>A Java development utility library.</description>
     <inceptionYear>2010</inceptionYear>
@@ -29,53 +29,19 @@
         <scm.url>${scm.parent.url}</scm.url>
     </properties>
 
-    <!-- Not inherited!?? -->
-    <prerequisites>
-        <maven>${maven.version}</maven>
-    </prerequisites>
+    <modules>
+        <module>devlib-core</module>
+    </modules>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>persistence-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.softsmithy.lib</groupId>
-            <artifactId>lib-core</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-    </dependencies>
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <configuration>
-                    <detectLinks>true</detectLinks>
-                    <links>
-                        <!-- javadoc link for javax.persistence -->
-                        <link>http://java.sun.com/javaee/6/docs/api</link>
-                    </links>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.4</version>
-            </plugin>
-        </plugins>
-    </reporting>
-     <profiles>
+    <profiles>
         <profile>
             <id>sonatype-oss-release</id>
             <build>
                 <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>buildnumber-maven-plugin</artifactId>
+                    </plugin>
                     <plugin>
                         <artifactId>maven-assembly-plugin</artifactId>
                         <executions>
@@ -86,7 +52,6 @@
                                     <goal>single</goal>
                                 </goals>
                                 <configuration>
-                                    <!--<finalName>softsmithy-devlib-all-v${project.version}</finalName>-->
                                     <descriptors>
                                         <descriptor>src/main/assembly/dist.xml</descriptor>
                                     </descriptors>
