@@ -9,7 +9,6 @@
     <includeBaseDirectory>false</includeBaseDirectory>
     <moduleSets>
         <moduleSet>
-
       <!-- Now, select which projects to include in this module-set. -->
             <includes>
                 <include>${project.groupId}:lib-core</include>
@@ -29,6 +28,25 @@
                 </fileSets>
             </sources>
             <binaries>
+                <unpack>false</unpack>
+                <outputFileNameMapping>${assembly.outputFileNameMapping}</outputFileNameMapping>
+            </binaries>
+        </moduleSet>
+        <moduleSet>
+            <includes>
+                <include>${project.groupId}:lib-core</include>
+            </includes>
+            <binaries>
+                <attachmentClassifier>javadoc</attachmentClassifier>
+                <outputDirectory>docs/api</outputDirectory>
+            </binaries>
+        </moduleSet>
+        <moduleSet>
+            <includes>
+                <include>${project.groupId}:lib-core</include>
+            </includes>
+            <binaries>
+                <attachmentClassifier>sources</attachmentClassifier>
                 <unpack>false</unpack>
                 <outputFileNameMapping>${assembly.outputFileNameMapping}</outputFileNameMapping>
             </binaries>
