@@ -1,8 +1,0 @@
-Changes:
-
-${project.version}:	    - Project migration: Ant -> Maven
-(Rev.: ${changeSet}) - License upgraded: SPL -> CDDL
-
-v20100524:  - API refactorings/ clean-ups after initial release
-(Rev.: 470) - New dependency to SoftSmithy Utility Library
-
